changed with required comments